removed useless comments

--- a/example.ipynb
+++ b/example.ipynb
@@ -86,10 +86,10 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "def plot_digit(image, label=None):\n",
-    "    plt.imshow(image, cmap=\"gray\")  # Plot in grayscale\n",
+    "    plt.imshow(image, cmap=\"gray\")\n",
     "    title = f\"Digit: {label}\" if label is not None else \"Digit\"\n",
     "    plt.title(title)\n",
-    "    plt.axis(\"off\")  # Hide axes\n",
+    "    plt.axis(\"off\")\n",
     "    plt.show()\n"
    ],
    "id": "initial_id"
